--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
 
-    <title>LRC staking</title>
+    <title>WHX staking</title>
     <meta name="description" content="Manage your stake of Loopring token(stakingpool.lrctoken.eth)" />
     <meta name="fortmatic-site-verification" content="UcZPXkZlE4mGr0zb" />
   </head>
